# pandas-indexing

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/: pull_request_template.rst
.github/workflows/: ci.yml  publish-tagged-to-pypi.yml
docs/: AUTHORS.rst  api.rst  conf.py  contributing.rst  index.rst  installation.rst  spelling_wordlist.txt  usage.rst
docs/_static/: custom.css
docs/notebooks/: introduction.ipynb
docs/reference/: accessors.rst  arithmetics.rst  core.rst  index.rst  init.rst  selectors.rst
src/pandas_indexing/: __init__.py  accessors.py  arithmetics.py  core.py  selectors.py  types.py  units.py  utils.py
src/pandas_indexing/datasets/: __init__.py  remindhighre_power.csv
src/pandas_indexing/iamc/: resolver.py
tests/: __init__.py  conftest.py  test_accessors.py  test_core.py  test_selectors.py  test_units.py
